--- a/src/app/components/students-list/students-list.component.html
+++ b/src/app/components/students-list/students-list.component.html
@@ -1,3 +1,22 @@
+<br/>
+<h2 class="text-center">Список студентов</h2>
+<div *ngFor="let student of students; let i = index" style="margin-bottom: 10px">
+  <input class="item" type="text" id="name{{student.id}}" value="{{student.name}}"/>
+  <input class="item" type="date" id="date{{student.id}}" value="{{student.birthdate | date:'yyyy-MM-dd'}}"/>
+  <input class="item" type="text" id="number{{student.id}}" value="{{student.num}}"/>
+  <button class="btn btn-outline-info" style="float: right; margin-left: 1%"
+          (click)="updateStudent(student.id!)">
+    ✏
+  </button>
+  <button class="btn btn-outline-danger" style="float: right;" (click)="deleteStudent(student.id!)"> –
+  </button>
+</div>
+<br/><br/>
 <div>
-<!--  <div *ngFor=""-->
+  <h2 class="text-center" style="margin-top: 150px">Создайте студента</h2>
+  <input class="item" type="text" id="name" placeholder="Имя"/>
+  <input class="item" type="date" id="date"/>
+  <input class="item" type="text" id="number" placeholder="Номер"/>
+  <button class="btn btn-outline-success" style="float: right; margin-left: 1%" (click)="createStudent()"> +
+  </button>
 </div>
