--- a/src/app/components/group-data/group-data.component.css
+++ b/src/app/components/group-data/group-data.component.css
@@ -4,3 +4,13 @@
   display: inline;
   width: 27%;
 }
+
+.list-item {
+  width: 100%;
+  min-height: 40px;
+  box-shadow: 0 0 5px 2px #e5e5e5;
+  float: left;
+  font-size: 20px;
+  margin-bottom: 15px;
+}
+
