--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
           <a routerLink="api/students" class="nav-link">Студенты</a>
         </li>
       </div>
-      <li class="nav-item" [routerLinkActive]="['active']">
+      <li class="nav-item" [routerLinkActive]="['active']" style="cursor: pointer;">
         <a (click)="logout()" class="nav-link">Выход</a>
       </li>
     </div>
