--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div *ngIf="showNav">
-  <nav class="navbar navbar-expand navbar-dark bg-success">
-    <div class="navbar-nav mr-auto">
+<nav class="navbar navbar-expand-lg navbar-dark bg-success">
+  <div class="container-fluid">
+    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       <li class="nav-item" [routerLinkActive]="['active']">
         <a routerLink="api/groups" class="nav-link">Группы</a>
       </li>
@@ -9,11 +10,14 @@
           <a routerLink="api/students" class="nav-link">Студенты</a>
         </li>
       </div>
-      <li class="nav-item" [routerLinkActive]="['active']" style="cursor: pointer;">
+    </ul>
+    <ul class="navbar-nav ">
+      <li class="nav-item " [routerLinkActive]="['active']" style="cursor: pointer;">
         <a (click)="logout()" class="nav-link">Выход</a>
       </li>
-    </div>
-  </nav>
+    </ul>
+  </div>
+</nav>
 </div>
 <div class="mt-3 container">
   <router-outlet></router-outlet>
