--- a/src/app/components/groups-list/groups-list.component.css
+++ b/src/app/components/groups-list/groups-list.component.css
@@ -1,4 +1,13 @@
 .list-item {
+  width: 87%;
+  min-height: 40px;
+  box-shadow: 0 0 5px 2px #e5e5e5;
+  float: left;
+  font-size: 20px;
+  margin-bottom: 15px;
+}
+
+.user-list-item {
   width: 100%;
   min-height: 40px;
   box-shadow: 0 0 5px 2px #e5e5e5;
