page not found add back route

--- a/src/app/components/page-not-found/page-not-found.component.html
+++ b/src/app/components/page-not-found/page-not-found.component.html
@@ -1,1 +1,5 @@
 <h5 class="text-center">Вы перешли на несуществующую страницу сайта</h5>
+
+<h5 class="text-center">Вы перешли на несуществующую страницу сайта <br/> <br/>
+  <a class="btn btn-outline-primary text-center" routerLink="..">Назад</a>
+</h5>
